--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,9 @@
         <div *ngIf="onlyOdd">
           <li
             class="list-group-item"
-            *ngFor="let odd of oddNumbers">
+            *ngFor="let odd of oddNumbers"
+            [ngClass]="{odd: odd % 2 !== 0}"
+            [ngStyle]="{backgroundColor: odd % 2 !== 0 ? 'yellow' : 'transparent'}">
             {{ odd }}
           </li>
         </div>
@@ -18,7 +20,9 @@
         <div *ngIf="!onlyOdd">
           <li
             class="list-group-item"
-            *ngFor="let even of evenNumbers">
+            *ngFor="let even of evenNumbers"
+            [ngClass]="{odd: even % 2 !== 0}"
+            [ngStyle]="{backgroundColor: even % 2 !== 0 ? 'yellow' : 'transparent'}">
             {{ even }}
           </li>
         </div>
