--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,7 @@
         class="btn btn-primary"
         (click)="onlyOdd = !onlyOdd">Only show odd numbers</button>
       <br><br>
+
       <ul class="list-group">
         
         <div *ngIf="onlyOdd">
@@ -28,6 +29,9 @@
         </div>
 
       </ul>
+
+      <p appBasicHighlight>Style me with basic highlight directive!</p>
+
       <ng-template [ngIf]="onlyOdd">
         <p>Only odd</p>
       </ng-template>
