--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,6 +31,7 @@
       </ul>
 
       <p appBasicHighlight>Style me with basic highlight directive!</p>
+      <p appBetterHighlight>Style me with better highlight directive!</p>
 
       <ng-template [ngIf]="onlyOdd">
         <p>Only odd</p>
