--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,6 +27,17 @@
             {{ even }}
           </li>
         </div>
+        <ng-template [ngIf]="!onlyOdd">
+          <div>
+            <li
+              class="list-group-item"
+              *ngFor="let even of evenNumbers"
+              [ngClass]="{odd: even % 2 !== 0}"
+              [ngStyle]="{backgroundColor: even % 2 !== 0 ? 'yellow' : 'transparent'}">
+              {{ even }}
+            </li>
+          </div>
+        </ng-template>
 
       </ul>
 
