--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -86,6 +86,13 @@
         defaultColor="yellow"
         appBetterHighlight="pink">Style me with better highlight directive 555555555555!</p>
 
+      <div [ngSwitch]="value">
+        <p *ngSwitchCase="5">Value is 5</p>
+        <p *ngSwitchCase="10">Value is 10</p>
+        <p *ngSwitchCase="88">Value is 88</p>
+        <p *ngSwitchDefault>Value is Default</p>
+      </div>
+
       <ng-template [ngIf]="onlyOdd">
         <p>Only odd</p>
       </ng-template>
